# stone-phaser

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
.github/workflows/: build.yml
.travis/: macports-ci  script-macos.sh  script-mingw.sh
dsp/: architecture.cpp  architecture.hpp  footer.cpp  stone_phaser.dsp  stone_phaser_stereo.dsp
modgui/stone-phaser/: modgui.ttl
modgui/stone-phaser-stereo/: modgui.ttl
modgui/stone-phaser-stereo/modgui/: icon-stone-phaser.html  stylesheet-stone-phaser.css
modgui/stone-phaser/modgui/: icon-stone-phaser.html  stylesheet-stone-phaser.css
plugins/stone-phaser/: Artwork.cpp  Artwork.hpp  Makefile  PhaserPlugin.cpp  PhaserPlugin.hpp  PhaserShared.cpp  PhaserShared.hpp  PhaserUI.cpp  PhaserUI.hpp  StonePhaserDsp.cpp
plugins/stone-phaser-stereo/: Artwork.cpp  Makefile  PhaserPlugin.cpp  PhaserPlugin.hpp  PhaserShared.cpp  PhaserUI.cpp  StonePhaserDsp.cpp  ui
plugins/stone-phaser-stereo/meta/: DistrhoPluginInfo.h
plugins/stone-phaser/meta/: DistrhoPluginInfo.h
plugins/stone-phaser/ui/: Cairo++.cpp  Cairo++.h  FontEngine.h  Fontstash.cpp
plugins/stone-phaser/ui/components/: KnobSkin.cpp  KnobSkin.hpp  SkinIndicator.cpp  SkinIndicator.hpp
resources/patch/: DPF-bypass.patch
resources/patches/: dpf-cairo-h.patch  dpf-static.patch
resources/ui/: pedal.knob  switch.knob
tools/chirpsynth/: Makefile  chirpsynth.cpp  chirpsynth.dsp
